# snowy_simple_logger_nodejs

./: README.md  package-lock.json  package.json  tsconfig.json
lib/: index.js  index.ts
lib/js/: index.d.ts  index.js  index.js.map
lib/ts/: index.spec.ts  index.ts
native/: Cargo.toml  build.rs
native/src/: lib.rs
