[package]
name = "snowy-node-logger"
version = "0.1.0"
authors = ["Krzysztof Zawisła <32432944+KrzysztofZawisla@users.noreply.github.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "snowy_node_logger"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.3.3"
chrono = "0.4.9"
colorful = "0.2.1"
