[package]
name = "snowy_simple_logger"
version = "0.1.0"
authors = ["Krzysztof Zawisła <zawislakrzysztof.zk@github.com>"]
repository = "https://github.com/KrzysztofZawisla/snowy_simple_logger_nodejs"
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "snowy_simple_logger"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.3"

[dependencies]
neon = "0.10.1"
chrono = "0.4.9"
colorful = "0.2.1"
